[package]
name = "gherkin-api"
version = "0.1.0"
authors = ["Brendan Molloy <brendan@bbqsrc.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gherkin_rust = { git = "https://github.com/bbqsrc/gherkin-rust.git", branch = "main", features = ["juniper"] }
futures = "0.3.1"

juniper = { git = "https://github.com/graphql-rust/juniper" }
# juniper_hyper = { git = "https://github.com/graphql-rust/juniper" }
# juniper_hyper = { git = "https://github.com/alvskar/juniper", rev = "560306887b84d7854180effd9c790ba8d2af327f" }

hyper = { version = "0.14.2", features = ["server", "http1", "http2", "tcp"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
url = "2"
thiserror = "1.0.23"
tracing = "0.1.22"
tracing-subscriber = "0.2.15"

[patch.crates-io]
juniper = { git = "https://github.com/graphql-rust/juniper" }